--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,14 @@ option(DISABLE_XWAYLAND "Disable the xwayland support" OFF)
 option(INSTALL_TINYWL "A minimum viable product Wayland compositor based on waylib" OFF)
 option(ADDRESS_SANITIZER "Enable address sanitize" OFF)
 
+set(QT_COMPONENTS Core Gui Quick)
+find_package(Qt6 COMPONENTS ${QT_COMPONENTS} REQUIRED)
 if(WITH_SUBMODULE_QWLROOTS)
     include(${CMAKE_CURRENT_SOURCE_DIR}/qwlroots/cmake/WaylandScannerHelpers.cmake)
     add_subdirectory(qwlroots)
     message("Using QWlroots from submodule")
+else()
+    find_package(QWlroots REQUIRED)
 endif()
 
 if(DISABLE_XWAYLAND)
