--- a/.github/workflows/archlinux-build-wlroots-17.yaml
+++ b/.github/workflows/archlinux-build-wlroots-17.yaml
@@ -21,21 +21,15 @@ jobs:
           pacman --noconfirm --noprogressbar -Syu
       - name: Install dep
         run: |
-          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman wlroots wayland-protocols git
+          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman wlroots0.17 wayland-protocols wlr-protocols git
           pacman -Syu --noconfirm --noprogressbar clang ninja make
           pacman -Syu --noconfirm --noprogressbar fakeroot meson sudo
-      - name: Set up user
-        run: |
-          useradd -m githubuser
-          echo -e "root ALL=(ALL:ALL) ALL\ngithubuser ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers
-      - name: Install wlr-protocols form the AUR
-        run: |
-          su githubuser -c "cd ~ && git clone https://aur.archlinux.org/wlr-protocols-git.git && cd ./wlr-protocols-git && makepkg -si --skippgpcheck --noconfirm"
       - uses: actions/checkout@v4
         with:
           submodules: true
       - name: Configure CMake
         run: |
+          export PKG_CONFIG_PATH=/usr/lib/wlroots0.17/pkgconfig/
           mkdir -p ${{github.workspace}}/build
           cmake -B ${{github.workspace}}/build -G Ninja -DWITH_SUBMODULE_QWLROOTS=ON
       - name: Build
