--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(tinywl)
+add_subdirectory(tinywl-new)
+# add_subdirectory(tinywl)
 add_subdirectory(blur)
 add_subdirectory(surface-delegate)
 add_subdirectory(outputviewport)
