Add menu bar for output

--- a/examples/tinywl-new/CMakeLists.txt
+++ b/examples/tinywl-new/CMakeLists.txt
@@ -49,6 +49,7 @@ qt_add_qml_module(${TARGET}
     QML_FILES Shadow.qml
     QML_FILES Border.qml
     QML_FILES GeometryAnimation.qml
+    QML_FILES OutputMenuBar.qml
 
     RESOURCES
     "res/xx.jpg"
