Support always on visible workspace

--- a/examples/tinywl-new/CMakeLists.txt
+++ b/examples/tinywl-new/CMakeLists.txt
@@ -38,6 +38,7 @@ qt_add_qml_module(${TARGET}
     SOURCES surfaceproxy.h surfaceproxy.cpp
     SOURCES wallpaperprovider.h wallpaperprovider.cpp
     SOURCES wallpaperimage.h wallpaperimage.cpp
+    SOURCES workspacemodel.h workspacemodel.cpp
 
     QML_FILES PrimaryOutput.qml
     QML_FILES CopyOutput.qml
