--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,13 @@ Maintainer: JiDe Zhang <zhangjide@deepin.org>
 Build-Depends: cmake,
                debhelper-compat (= 13),
                libpixman-1-dev,
-               libwlroots-dev (>= 0.17.0),
+               libwlroots-0.18-dev,
                libxcb-ewmh-dev,
                pkg-config,
                qml6-module-qtquick-templates,
-               qt6-base-dev-tools (>= 6.4.0),
-               qt6-base-private-dev (>= 6.4.0),
-               qt6-declarative-private-dev (>= 6.4.0),
+               qt6-base-dev-tools (>= 6.6.0),
+               qt6-base-private-dev (>= 6.6.0),
+               qt6-declarative-private-dev (>= 6.6.0),
                qwlroots,
                wayland-protocols,
                wlr-protocols,
@@ -28,7 +28,7 @@ Description:  A wrapper for wlroots based on Qt
 Package: libwaylib-dev
 Architecture: any
 Depends: libwaylib (=${binary:Version}),
-         libwlroots-dev (>= 0.17.0),
+         libwlroots-0.18-dev,
          qt6-base-dev-tools (>= 6.6.0),
          qt6-base-private-dev (>= 6.6.0),
          qt6-declarative-private-dev (>= 6.6.0),
