feat: add wrappointer
Add WrapPointer used for WrapObject.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -196,6 +196,8 @@ set(HEADERS
     utils/wimagebuffer.h
     utils/wcursorimage.h
     utils/WCursorImage
+    utils/wwrappointer.h
+    utils/WWrapPointer
 
     protocols/wxdgshell.h
     protocols/WXdgShell
