test: add unit test for wwrappointer
Add unit test for wwrappointer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,5 +47,6 @@ if(BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif()
 if(BUILD_TESTS)
+    enable_testing(true)
     add_subdirectory(tests)
 endif()
