fix: compatibility with Qt 6.9+
Qt renamed QGenericUnixServices on 6.9+:
https://github.com/qt/qtbase/commit/3e29267df0e2f332290caad69e5bd5cfd61cf3da

The fix for
https://github.com/qt/qtdeclarative/commit/2f35c7036e468d97ace2a5b3987674a30d29d532
wasn't cherry-picked into 6.9.0. Let's change it to target 6.10.0 for
now.

Also fix CI for Arch Linux.

--- a/.github/workflows/archlinux-build-wlroots-18.yaml
+++ b/.github/workflows/archlinux-build-wlroots-18.yaml
@@ -21,7 +21,7 @@ jobs:
           pacman --noconfirm --noprogressbar -Syu
       - name: Install dep
         run: |
-          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman wlroots wayland-protocols wlr-protocols git
+          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman vulkan-headers wlroots wayland-protocols wlr-protocols git
           pacman -Syu --noconfirm --noprogressbar clang ninja make
           pacman -Syu --noconfirm --noprogressbar fakeroot meson sudo
       - uses: actions/checkout@v4
