Make existing features work properly on wlroots-0.19
Update nix flake lock and qwlroots submodule

--- a/.github/workflows/archlinux-build-wlroots-19.yaml
+++ b/.github/workflows/archlinux-build-wlroots-19.yaml
@@ -1,4 +1,4 @@
-name: Build on archlinux with wlroots-18
+name: Build on archlinux with wlroots-19
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
           pacman --noconfirm --noprogressbar -Syu
       - name: Install dep
         run: |
-          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman vulkan-headers wlroots wayland-protocols wlr-protocols git
+          pacman -Syu --noconfirm --noprogressbar base-devel qt6-base qt6-declarative cmake pkgconfig pixman vulkan-headers wlroots0.19 wayland-protocols wlr-protocols git
           pacman -Syu --noconfirm --noprogressbar clang ninja make
           pacman -Syu --noconfirm --noprogressbar fakeroot meson sudo
       - uses: actions/checkout@v4
